--- a/style.css
+++ b/style.css
@@ -1,88 +1,99 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  body {
-    font-family: cursive;
-  }
-  a {
-    text-decoration: none;
-  }
-  li {
-    list-style: none;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: cursive;
+}
+a {
+  text-decoration: none;
+}
+li {
+  list-style: none;
+}
+/* LOGO */
+.logo {
+  font-size: 32px;
+}
 
-  .logo {
+/* NAVBAR STYLING STARTS */
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: teal;
+  color: white;
+}
+.nav-links a {
+  color: white;
+}
+
+/* NAVBAR MENU */
+.menu {
+  display: flex;
+  gap: 1em;
+  font-size: 18px;
+}
+.menu li:hover {
+  background-color: #4c9e9e;
+  border-radius: 5px;
+  transition: 0.3 ease;
+}
+.menu li {
+  padding: 5px 14px;
+}
+
+/* DROPDOWN MENU */
+.services {
+  position: relative;
+}
+
+.dropdown {
+  background-color: rgb(1, 139, 139);
+  padding: 1em 0;
+  display: none;
+  position: absolute; /* With respect to parent*/
+  border-radius: 8px;
+  /* top: 35px; */
+}
+
+.dropdown li {
+  padding: 0.5em 1em;
+  width: 8em;
+  text-align: center;
+}
+
+.services:hover .dropdown {
+  display: block;
+}
+
+/* RESPONSIVE STYLING */
+input[type="checkbox"] {
+  display: none;
+}
+
+.hamburger {
+  font-size: 32px;
+  display: none;
+}
+
+/* APPLYING MEDIA QUERIES */
+@media (max-width: 750px) {
+ 
+.nav-links{
+  display: none;
+}
+  .hamburger {
     font-size: 32px;
-  }
-  
-
-  .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    background-color: teal;
-    color: white;
-  }
-  .nav-links a {
-    color: white;
-  }
-
-  .menu {
-    display: flex;
-    gap: 1em;
-    font-size: 18px;
-  }
-  .menu li:hover {
-    background-color: #4c9e9e;
-    border-radius: 5px;
-    transition: 0.3 ease;
-  }
-  .menu li {
-    padding: 5px 14px;
-  }
-  
-
-  .services {
-    position: relative;
-  }
-  
-  .dropdown {
-    background-color: rgb(1, 139, 139);
-    padding: 1em 0;
-    display: none;
-    position: absolute; 
-    border-radius: 8px;
-  }
-  
-  .services:hover .dropdown {
     display: block;
   }
-  
-  
-  input[type="checkbox"] {
-    display: none;
-  }
-  
-  .hamburger {
-    display: none;
-  }
-  
-  @media (max-width: 750px) {
-    .menu {
-      display: none;
-      position: absolute;
-    }
-    .hamburger {
-      display: block;
-      position: absolute;
-    right: 20px;
-    font-size: xx-large;
-    }
+ 
+  input[type="checkbox"]:checked~ .nav-links  {
+    display: flex;
+    flex-direction: column;
+}
 
-    input[type="checkbox"]:checked ~ .menu {
-      display: block;
-    }
   }
+
