--- a/navstyle.css
+++ b/navstyle.css
@@ -81,19 +81,31 @@ input[type="checkbox"] {
 
 /* APPLYING MEDIA QUERIES */
 @media (max-width: 750px) {
- 
-.nav-links{
-  display: none;
-}
   .hamburger {
-    font-size: 32px;
     display: block;
   }
- 
-  input[type="checkbox"]:checked~ .nav-links  {
-    display: flex;
-    flex-direction: column;
-}
-
+  .menu {
+    display: none;
+    position: absolute;
+    background-color: teal;
+    left: 0;
+    right: 0;
+    text-align: center;
+    padding: 16px 0;
   }
-
+  .menu li:hover {
+    background-color: #4c9e9e;
+    border-radius: 5px;
+    transition: 0.3 ease;
+  }
+  .menu li {
+    margin-top: 12px;
+  }
+  input[type="checkbox"]:checked ~ .menu {
+    display: block;
+  }
+  .dropdown {
+    left: 50%;
+    top: 30px;
+  }
+}
